--- a/LeagueOfMinePlugin/nbproject/project.properties
+++ b/LeagueOfMinePlugin/nbproject/project.properties
@@ -49,6 +49,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.bukkit-1.5.1-R0.3-20130423.054856-3.jar=http://jd.bukkit.org/apidocs/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
